<resources>
    <string name="app_name">HOTELS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="latest_searching">LATEST SEARCHING</string>

    <string name="with_Google">with Google</string>
    <string name="registration_is_failed">Registration is failed</string>
    <string name="incomplete_information_entered">Incomplete information entered</string>
    <string name="invalid_mail">Invalid email</string>
    <string name="fullname_empty">Fullname is empty</string>
    <string name="password_match_error">Your password must be at least 8 charachters</string>
    <string name="sign_up_reg_success_text">Registered Successfully</string>
    <string name="registered_mail">Registered mail!</string>
    <string name="added_to_favorite_list">Added to favorite list</string>
    <string name="remove_from_favorite_list">Remove item from your favorite list!</string>
    <string name="remove_from_cart_list">Remove item from your cart!</string>
    <string name="add_to_cart">Added to cart</string>
    <string name="already_in_cart">This item already in cart</string>
    <string name="update_profile">Your profile is updated successfully</string>


    <string name="swimming_pool">Swimming pool</string>
    <string name="free_wifi">WiFi</string>
    <string name="spa">Spa</string>

    <style name="TestStyleWithLineHeight.">17dp</style>

    <string name="wrong_email_password">Wrong email password</string>
    <string name="breakfast">Wonderful Breakfast</string>
    <string name="bar">Bar</string>
    <string name="parking">Parking</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string-array name="adults">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="children">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>