<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="1500dp"
    app:layoutDescription="@xml/fragment_detail_scene"
    tools:context=".HOTELS.presentation.ui.fragments.DetailFragment">

    <ImageView
        android:id="@+id/detail_image"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/detail_name"
        style="@style/text_style_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_image" />


    <TextView
        android:id="@+id/priceDetails"
        style="@style/text_style_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="123"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_image" />

    <TextView
        android:id="@+id/textView"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="Per night"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceDetails" />

    <TextView
        android:id="@+id/info_Details"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="2 Guest  1 Bedroom  1 Bath"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_name" />

    <ImageView
        android:id="@+id/rating1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_baseline_star_rate_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_Details" />


    <ImageView
        android:id="@+id/rating2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_baseline_star_rate_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_Details" />


    <ImageView
        android:id="@+id/rating3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_baseline_star_rate_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_Details" />


    <ImageView
        android:id="@+id/rating4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_baseline_star_rate_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_Details" />


    <ImageView
        android:id="@+id/rating5"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_baseline_star_rate_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_Details" />

    <TextView
        android:id="@+id/describtion"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="hbhhghghjghghghghgh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rating1" />

    <ImageView
        android:id="@+id/image_pool"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_baseline_pool_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/describtion" />

    <TextView
        android:id="@+id/textView2"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:text="@string/swimming_pool"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/image_pool"
        app:layout_constraintTop_toBottomOf="@+id/describtion" />

    <ImageView
        android:id="@+id/image_breakfast"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_baseline_free_breakfast_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_pool" />

    <TextView
        android:id="@+id/text_breakfast"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:text="@string/breakfast"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/image_pool"
        app:layout_constraintTop_toBottomOf="@+id/image_pool" />

    <ImageView
        android:id="@+id/image_spa"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_baseline_spa_24"
        app:layout_constraintEnd_toStartOf="@id/text_spa"
        app:layout_constraintTop_toBottomOf="@id/describtion" />

    <TextView
        android:id="@+id/text_spa"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:text="@string/spa"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/describtion" />

    <ImageView
        android:id="@+id/image_bar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_baseline_wine_bar_24"
        app:layout_constraintEnd_toStartOf="@id/text_bar"
        app:layout_constraintTop_toBottomOf="@id/image_wifi" />

    <TextView
        android:id="@+id/text_bar"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:text="@string/bar"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_wifi" />

    <ImageView
        android:id="@+id/image_wifi"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_baseline_wifi_24"
        app:layout_constraintEnd_toStartOf="@id/text_wifi"
        app:layout_constraintTop_toBottomOf="@id/image_spa" />

    <TextView
        android:id="@+id/text_wifi"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:text="@string/free_wifi"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_spa" />

    <ImageView
        android:id="@+id/image_parking"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_baseline_local_parking_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_wifi" />

    <TextView
        android:id="@+id/text_parking"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:text="@string/parking"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/image_parking"
        app:layout_constraintTop_toBottomOf="@+id/image_wifi" />

    <TextView
        android:id="@+id/text_checkin"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="Check-in: 14:00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_parking" />


    <TextView
        android:id="@+id/text_checkout"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="Check-out: 12:00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_parking" />

    <TextView
        android:id="@+id/priceDetails2"
        style="@style/text_style_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_checkin" />

    <TextView
        android:id="@+id/priceinfo"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="for 1 room/1 night"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priceDetails2" />

    <Button
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@color/toolbar_background3"
        android:text="See aviability"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_checkout" />


</androidx.constraintlayout.motion.widget.MotionLayout>